# Sign_Language_Recognition

./: CMakeLists.txt
Sign_Language_Recognition_1/: CommonHeader.h  Sign_Language_Recognition.sln
Sign_Language_Recognition_1/MathLib/: BasicException.cpp  BasicException.h  Mathematics.cpp  Mathematics.h  MatrixH.h  MatrixT.h  Plane.h  SampleGenerator.cpp  SampleGenerator.h  Spline.h  Vector3.h  Vector4.h  VectorR.h  VectorT.h
Sign_Language_Recognition_1/MotionData/: BVHReader.cpp  BVHReader.h  BVHWriter.cpp  BVHWriter.h  DataRW.cpp  DataRW.h  MotionClip.cpp  MotionClip.h  MotionEditor.cpp  MotionEditor.h  MotionJoint.cpp  MotionJoint.h  SerialTextDataReader.cpp  SerialTextDataReader.h  spline.h
Sign_Language_Recognition_1/MotionRecognition/: FClassifier.cpp  FClassifier.h  FTrainer.cpp  FTrainer.h  FWeakClassifierManager.cpp  FWeakClassifierManager.h  Feature.cpp  Feature.h  FeatureManager.cpp  FeatureManager.h  FeatureParser.cpp  FeatureParser.h  (+19 more)
src/: CMakeLists.txt  main.cpp
src/MathLib/: BasicException.cpp  CMakeLists.txt  Mathematics.cpp  SampleGenerator.cpp
src/MathLib/Filter/: mkCButterworth.cpp  mkCDynamicMatrix.cpp  mkCGenericFilter.cpp
src/MathLib/PCA/: pca.cpp
src/SwiftModel/: CMakeLists.txt  SwiftModel.cpp
src/Util/: CMakeLists.txt  config.cpp  debug_dialog.cpp
src/uis/: libhmmBuilderDialog.cpp  libhmmBuilderDialog.h  libhmmBuilderDialog.ui  qrc_signlanguagerecognition.cpp  signlanguagerecognition.cpp  signlanguagerecognition.h  signlanguagerecognition.qrc  signlanguagerecognition.ui  ui_libhmmBuilderDialog.h  ui_signlanguagerecognition.h
(+140 files in other folders)
