cmake_minimum_required(VERSION 2.8.12)
project(Sign_Language_Recognition)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Widgets REQUIRED)
include_directories(include third_party src/uis)
add_subdirectory(third_party)
add_subdirectory(src)
