cmake_minimum_required(VERSION 2.8.12)
project(Sign_Language_Recognition)
find_package(Qt5Core)
find_package(Qt5Gui)
find_package(Qt5Widgets)
set(CMAKE_AUTOMOC ON)
set(ui_target uis)
include_directories(uis)
file(GLOB_RECURSE GUI_H    "uis/*.h"   )
file(GLOB_RECURSE GUI_CPP  "uis/*.cpp" )
file(GLOB_RECURSE GUI_UI   "uis/*.ui"  )
file(GLOB_RECURSE GUI_QRC  "uis/*.qrc" )
qt5_wrap_ui(GUI_H ${GUI_UI})
qt5_add_resources(GUI_QRC ${GUI_QRC})
AUX_SOURCE_DIRECTORY(./Util/ Util_SRC_LIST)
AUX_SOURCE_DIRECTORY(./MathLib/ MathLib_SRC_LIST)
AUX_SOURCE_DIRECTORY(./MathLib/PCA MathLib_SRC_LIST)
AUX_SOURCE_DIRECTORY(./MathLib/Filter MathLib_SRC_LIST)
source_group(UI_FILES FILES ${GUI_UI})
source_group(MathLib FILES ${MathLib_SRC_LIST})
source_group(Util FILES ${Util_SRC_LIST})
AUX_SOURCE_DIRECTORY(. Main_SRC_LIST)
ADD_EXECUTABLE(Sign_Language_Recognition  ${Main_SRC_LIST} ${MathLib_SRC_LIST} ${Util_SRC_LIST} ${GUI_H} ${GUI_CPP} ${GUI_MOC} ${GUI_UI} ${GUI_QRC})
qt5_use_modules(Sign_Language_Recognition Widgets Gui Core)
